# hl7-helper

./: .gitignore  Cargo.toml
actom/: Cargo.toml
actom/src/: lib.rs
cda/: Cargo.toml
cda/src/model/: mod.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/alchemy/: document.rs
core/src/model/: code.rs  id.rs  language.rs  mod.rs  person.rs  realm_code.rs  xtime.rs
core/src/model/patient/: patient.rs
core/src/model/prop/: education_level.rs  occupation.rs
core/src/prop/: assigned_author.rs  author.rs  house_hold.rs  mod.rs
core/src/validate_rule/: mod.rs
examples/xmls/: EHR-SD-1-个人基本健康信息登记_曾祥明_20140814.xml  EHR-SD-12-高血压患者随访服务_曾祥明_20200519.xml  EHR-SD-14-重性精神疾病患者个人信息登记_曾祥明.xml  EHR-SD-16-成人健康体检_曾祥明_20191025.xml
hl7_cda/: Cargo.toml
hl7_cda/src/: lib.rs
hl7_cda/src/cda/: personal_basic_health.rs
hl7_core/: Cargo.toml
hl7_core/src/: lib.rs
hl7_core/src/cda/: personal_basic_health.rs
hl7_core/src/model/: address.rs  code.rs  house_type.rs  id.rs  language.rs  mod.rs  organization.rs  xvalue.rs
hl7_core/src/model/patient/: mod.rs  patient_role.rs
hl7_core/src/model/prop/: mod.rs
hl7r_cda/: Cargo.toml
hl7r_cda/src/: lib.rs
hl7r_cda/src/cda/: mod.rs
hl7r_cda/src/patient/: patient.rs
