[package]
name = "cda"
version = "0.1.0"
authors = ["walker <warriorsfly@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
validator = "0.11"
validator_derive = "0.11"
core = { path = "../core", version = "0.1.0" }