[package]
name = "cda"
version = "0.1.0"
authors = ["walker <warriorsfly@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

validator = { version = "0.12", features = [ "derive" ] }
core = { path = "../core", version = "0.1.0" }