[package]
name = "core"
version = "0.1.0"
authors = ["walker <warriorsfly@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml= { version = "0.18", features = [ "serialize" ] }
serde = { version = "1", features = [ "derive" ] }
serde_derive = "1"
validator = "0.11"
validator_derive = "0.11"
