[package]
name = "hl7_cda"
version = "0.1.0"
authors = ["walker <warriorsfly@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hl7_core = { path = "../hl7_core" }
quick-xml= { version = "0.18", features = [ "serialize" ] }
serde = { version = "1", features = [ "derive" ] }
